--- a/notebooks/best-players-per-rating.ipynb
+++ b/notebooks/best-players-per-rating.ipynb
@@ -6,16 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install pandas numpy matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "matches_train_data = pd.read_csv('../data/raw/matches.csv')\n",
@@ -56,11 +46,17 @@
     "\n",
     "all_ratings_df = pd.DataFrame(rows)\n",
     "\n",
+    "PROCESSED_FILES_FOLDER = '../data/processed'\n",
+    "OUTPUT_PATH = f'{PROCESSED_FILES_FOLDER}/all_ratings.csv'\n",
+    "\n",
+    "all_ratings_df.to_csv(OUTPUT_PATH, index=False)\n",
+    "\n",
     "aggregated_df = all_ratings_df.groupby(['id']).agg(\n",
     "    name=('name', 'first'),\n",
     "    min_rating=('rating', 'min'),\n",
     "    avg_rating=('rating', 'mean'),\n",
-    "    max_rating=('rating', 'max')\n",
+    "    max_rating=('rating', 'max'),\n",
+    "    matches_count=('id', 'size')\n",
     ").reset_index()\n",
     "\n",
     "display(aggregated_df)\n",
@@ -81,13 +77,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# avg\n",
     "# Definindo o critério para os melhores jogadores\n",
-    "threshold = 1.2\n",
+    "n_players = 10\n",
+    "min_avg_rating_threshold = 1.2\n",
+    "min_matches_played_threshold = aggregated_df['matches_count'].quantile(0.90)\n",
     "\n",
-    "best_players = aggregated_df[aggregated_df['avg_rating'] > threshold]\n",
-    "best_players = best_players.nlargest(50, 'max_rating')\n",
+    "best_players = aggregated_df[aggregated_df['avg_rating'] > min_avg_rating_threshold]\n",
+    "best_players = aggregated_df[aggregated_df['matches_count'] > min_matches_played_threshold]\n",
     "best_players = best_players.sort_values(by='avg_rating', ascending=False)\n",
+    "best_players = best_players[:n_players]\n",
+    "best_players = best_players.reset_index(drop=True)\n",
     "best_players"
    ]
   },
@@ -101,10 +100,9 @@
     "import matplotlib.pyplot as plt\n",
     "sorted_df = best_players.sort_values(by='avg_rating', ascending=True)\n",
     "\n",
-    "# Criar o gráfico de barras\n",
     "plt.figure(figsize=(10, 6))\n",
     "ax = sorted_df.plot(kind='bar', x='name', y=['min_rating', 'avg_rating', 'max_rating'], figsize=(10, 6), title=\"Ratings dos Jogadores\", xlabel=\"Jogadores\", ylabel=\"Ratings\", legend=True)\n",
-    "plt.xticks(rotation=90)\n",
+    "plt.xticks(rotation=75)\n",
     "plt.show()"
    ]
   },
@@ -133,7 +131,7 @@
     "    plt.text(sorted_df['name'].iloc[i], sorted_df['avg_rating'].iloc[i], f'{sorted_df[\"avg_rating\"].iloc[i]}', fontsize=9, ha='right', color='blue')\n",
     "    plt.text(sorted_df['name'].iloc[i], sorted_df['max_rating'].iloc[i], f'{sorted_df[\"max_rating\"].iloc[i]}', fontsize=9, ha='left', color='red')\n",
     "\n",
-    "plt.xticks(rotation=90)\n",
+    "plt.xticks(rotation=75)\n",
     "plt.legend()\n",
     "plt.show()"
    ]
