--- a/notebooks/create-train-data.ipynb
+++ b/notebooks/create-train-data.ipynb
@@ -2,45 +2,330 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install pandas matplotlib seaborn scikit-learn xgboost"
+    "BEST_OF = [1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading data from ../data/processed/matches_results.csv and ../data/processed/matches.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/10/t4cd3lc515j88jjkvk8hvrbw0000gn/T/ipykernel_7721/2589967565.py:37: DtypeWarning: Columns (35,36,37,41,42,43,44,45,46,47,48,49,50,51,52,56,57,58,59,60,61,65,66,67,68,69,70,71,72,73,74,75,76,80,81,82,83,84,85,89,90,91,92,93,94,95,96,97,98,99,100,104,105,106,107,108,109,113,114,115,116,117,118,119,120,121,122,123,124,128,129,130,131,132,133,137,138,139,140,141,142,143,144,145,146,147,148,152,153,154,155,156,157,161,162,163,164,165,166,167,168,169,170,171,172,176,177,178,179,180,181,185,186,187,188,189,190,191,192,193,194,195,196,200,201,202,203,204,205,209,210,211,212,213,214,215,216,217,218,219,220,224,225,226,227,228,229,233,234,235,236,237,238,239,240,241,242,243,244,248,249,250,251,252,253,257,258,259,260,261,262,263,264,265,266,267,268,272,273,274) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  matches_train_data = pd.read_csv('../data/raw/matches.csv')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>teamOneWon</th>\n",
+       "      <th>teamTwoWon</th>\n",
+       "      <th>map1Team1SideBothPlayer1PlusMinus</th>\n",
+       "      <th>map1Team1SideCounterTerroristPlayer1PlusMinus</th>\n",
+       "      <th>map1Team1SideTerroristPlayer1PlusMinus</th>\n",
+       "      <th>map1Team1SideBothPlayer1Adr</th>\n",
+       "      <th>map1Team1SideCounterTerroristPlayer1Adr</th>\n",
+       "      <th>map1Team1SideTerroristPlayer1Adr</th>\n",
+       "      <th>map1Team1SideBothPlayer1Kast</th>\n",
+       "      <th>map1Team1SideCounterTerroristPlayer1Kast</th>\n",
+       "      <th>...</th>\n",
+       "      <th>map1Team2SideTerroristPlayer5PlusMinus</th>\n",
+       "      <th>map1Team2SideBothPlayer5Adr</th>\n",
+       "      <th>map1Team2SideCounterTerroristPlayer5Adr</th>\n",
+       "      <th>map1Team2SideTerroristPlayer5Adr</th>\n",
+       "      <th>map1Team2SideBothPlayer5Kast</th>\n",
+       "      <th>map1Team2SideCounterTerroristPlayer5Kast</th>\n",
+       "      <th>map1Team2SideTerroristPlayer5Kast</th>\n",
+       "      <th>map1Team2SideBothPlayer5Rating</th>\n",
+       "      <th>map1Team2SideCounterTerroristPlayer5Rating</th>\n",
+       "      <th>map1Team2SideTerroristPlayer5Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>21</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.36</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 122 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    teamOneWon  teamTwoWon map1Team1SideBothPlayer1PlusMinus  \\\n",
+       "21       False        True                                 4   \n",
+       "22       False        True                                13   \n",
+       "23       False        True                                21   \n",
+       "24        True       False                                 0   \n",
+       "25        True       False                                 3   \n",
+       "\n",
+       "   map1Team1SideCounterTerroristPlayer1PlusMinus  \\\n",
+       "21                                             2   \n",
+       "22                                            14   \n",
+       "23                                            11   \n",
+       "24                                             3   \n",
+       "25                                            -3   \n",
+       "\n",
+       "   map1Team1SideTerroristPlayer1PlusMinus  map1Team1SideBothPlayer1Adr  \\\n",
+       "21                                      1                         0.79   \n",
+       "22                                      0                         1.11   \n",
+       "23                                     10                         1.36   \n",
+       "24                                     -3                         0.68   \n",
+       "25                                      6                         0.94   \n",
+       "\n",
+       "    map1Team1SideCounterTerroristPlayer1Adr  map1Team1SideTerroristPlayer1Adr  \\\n",
+       "21                                     1.20                              0.74   \n",
+       "22                                     1.45                              0.88   \n",
+       "23                                     1.41                              1.34   \n",
+       "24                                     0.80                              0.48   \n",
+       "25                                     0.88                              1.00   \n",
+       "\n",
+       "    map1Team1SideBothPlayer1Kast  map1Team1SideCounterTerroristPlayer1Kast  \\\n",
+       "21                          0.77                                      0.92   \n",
+       "22                          0.95                                      1.00   \n",
+       "23                          0.88                                      1.00   \n",
+       "24                          0.74                                      0.75   \n",
+       "25                          0.83                                      0.83   \n",
+       "\n",
+       "    ...  map1Team2SideTerroristPlayer5PlusMinus map1Team2SideBothPlayer5Adr  \\\n",
+       "21  ...                                      -5                        0.46   \n",
+       "22  ...                                     -10                        0.45   \n",
+       "23  ...                                      -5                        0.56   \n",
+       "24  ...                                      -4                        0.44   \n",
+       "25  ...                                      -2                        0.45   \n",
+       "\n",
+       "   map1Team2SideCounterTerroristPlayer5Adr map1Team2SideTerroristPlayer5Adr  \\\n",
+       "21                                    0.27                             0.37   \n",
+       "22                                    0.49                             0.29   \n",
+       "23                                    0.65                             0.36   \n",
+       "24                                    0.56                             0.33   \n",
+       "25                                    0.57                             0.45   \n",
+       "\n",
+       "   map1Team2SideBothPlayer5Kast map1Team2SideCounterTerroristPlayer5Kast  \\\n",
+       "21                         0.68                                     0.70   \n",
+       "22                         0.58                                     0.57   \n",
+       "23                         0.59                                     0.58   \n",
+       "24                         0.63                                     0.71   \n",
+       "25                         0.75                                     0.58   \n",
+       "\n",
+       "   map1Team2SideTerroristPlayer5Kast  map1Team2SideBothPlayer5Rating  \\\n",
+       "21                              0.67                            0.58   \n",
+       "22                              0.42                            0.38   \n",
+       "23                              0.60                            0.45   \n",
+       "24                              0.58                            0.84   \n",
+       "25                              0.67                            0.78   \n",
+       "\n",
+       "    map1Team2SideCounterTerroristPlayer5Rating  \\\n",
+       "21                                        0.52   \n",
+       "22                                        0.47   \n",
+       "23                                        0.54   \n",
+       "24                                         0.9   \n",
+       "25                                        0.66   \n",
+       "\n",
+       "    map1Team2SideTerroristPlayer5Rating  \n",
+       "21                                 0.56  \n",
+       "22                                 0.26  \n",
+       "23                                 0.25  \n",
+       "24                                 0.71  \n",
+       "25                                 0.81  \n",
+       "\n",
+       "[5 rows x 122 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(448, 122)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to ../data/processed/full_matches_train_data.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "PROCESSED_FILES_FOLDER = '../data/processed'\n",
     "OUTPUT_PATH = f'{PROCESSED_FILES_FOLDER}/full_matches_train_data.csv'\n",
     "\n",
-    "\n",
     "## Definindo as colunas que serão usadas para treinar o modelo\n",
     "team_map_results_columns_to_add  = [\"PlusMinus\", \"Adr\", \"Kast\", \"Rating\"]\n",
     "team_map_results_columns_to_drop  = []\n",
     "\n",
     "map_results = [f\"map{map_num}Team{team_num}Side{side}Player{player_num}{attribute}\"\n",
-    "                for map_num in range(1, 6) \n",
+    "                for map_num in BEST_OF \n",
     "                for team_num in range(1, 3) \n",
     "                for player_num in range(1, 6)\n",
     "                for attribute in team_map_results_columns_to_add\n",
     "                for side in [\"Both\", \"CounterTerrorist\", \"Terrorist\"]]\n",
     "\n",
     "kast_columns = [f\"map{map_num}Team{team_num}Side{side}Player{player_num}{attribute}\"\n",
-    "                for map_num in range(1, 6) \n",
+    "                for map_num in BEST_OF \n",
     "                for team_num in range(1, 3) \n",
     "                for player_num in range(1, 6)\n",
     "                for attribute in [\"Kast\"]\n",
     "                for side in [\"Both\", \"CounterTerrorist\", \"Terrorist\"]]\n",
     "\n",
     "adr_columns = [f\"map{map_num}Team{team_num}Side{side}Player{player_num}{attribute}\"\n",
-    "                for map_num in range(1, 6) \n",
+    "                for map_num in BEST_OF \n",
     "                for team_num in range(1, 3) \n",
     "                for player_num in range(1, 6)\n",
     "                for attribute in [\"Adr\"]\n",
@@ -50,6 +335,7 @@
     "matches_train_data_columns = ['eventId', 'matchId', 'mapBestOf'] + map_results\n",
     "\n",
     "print(f\"Reading data from {PROCESSED_FILES_FOLDER}/matches_results.csv and {PROCESSED_FILES_FOLDER}/matches.csv\")\n",
+    "\n",
     "matches_results_train_data = pd.read_csv('../data/raw/matches_results.csv')\n",
     "matches_train_data = pd.read_csv('../data/raw/matches.csv')\n",
     "\n",
@@ -61,6 +347,8 @@
     "## Combinando os dados gerais das partidas com os detalhes das partidas\n",
     "full_matches_train_data = pd.merge(matches_results_train_data, matches_train_data, on='matchId', how='inner')\n",
     "\n",
+    "full_matches_train_data = full_matches_train_data[full_matches_train_data['mapBestOf'].isin(BEST_OF)]\n",
+    "\n",
     "## Data Wrangling\n",
     "full_matches_train_data.fillna(0, inplace=True)\n",
     "full_matches_train_data.replace(\"Not Available\", 0, inplace=True)\n",
@@ -69,13 +357,21 @@
     "full_matches_train_data.drop(team_map_results_columns_to_drop, axis=1, inplace=True)\n",
     "full_matches_train_data.drop(['mapBestOf'], axis=1, inplace=True)\n",
     "\n",
+    "## arredondando os valores de Kast e Adr\n",
     "for column in kast_columns:\n",
     "    full_matches_train_data[column] = full_matches_train_data[column].apply(lambda x: round(float(x.strip('%')) / 100, 2) if str(x) != '0' else 0)\n",
-    "\n",
     "for column in adr_columns:\n",
     "    full_matches_train_data[column] = full_matches_train_data[column].apply(lambda x: round(float(x) / 100, 2))\n",
-    "    \n",
+    "\n",
+    "## Convertendo as colunas para float\n",
+    "# for column in full_matches_train_data.columns:\n",
+    "#     full_matches_train_data[column] = full_matches_train_data[column].astype(float)\n",
+    "\n",
     "full_matches_train_data.to_csv(OUTPUT_PATH, index=False)\n",
+    "\n",
+    "display(full_matches_train_data.head())\n",
+    "display(full_matches_train_data.shape)\n",
+    "\n",
     "print(f\"Data saved to {OUTPUT_PATH}\")"
    ]
   }
