--- a/notebooks/decision_tree.ipynb
+++ b/notebooks/decision_tree.ipynb
@@ -2,26 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install pandas matplotlib seaborn scikit-learn xgboost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia do Modelo de Árvore de Decisão: 1.00\n",
+      "Score do modelo de Árvore de Decisão: 1.0\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       1.00      1.00      1.00       620\n",
+      "\n",
+      "    accuracy                           1.00       620\n",
+      "   macro avg       1.00      1.00      1.00       620\n",
+      "weighted avg       1.00      1.00      1.00       620\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
-    "pd.set_option('future.no_silent_downcasting', True)\n",
     "\n",
     "full_matches_train_data = pd.read_csv('../data/processed/full_matches_train_data.csv')\n",
     "\n",
@@ -32,8 +38,6 @@
     "# Target (coluna que será prevista)\n",
     "y = full_matches_train_data['teamOneWon']\n",
     "y = y.apply(pd.to_numeric, errors='coerce')\n",
-    "\n",
-    "print(f\"Número de amostras em X?{X.shape} e y:{y.shape}\")\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5)\n",
     "\n",
@@ -46,8 +50,12 @@
     "\n",
     "# Calcular a acurácia\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
     "print(f'Acurácia do Modelo de Árvore de Decisão: {accuracy:.2f}')\n",
-    "print(f\"Score do modelo de Árvore de Decisão: {model.score(X_test, y_test)}\")"
+    "print(f\"Score do modelo de Árvore de Decisão: {model.score(X_test, y_test)}\")\n",
+    "\n",
+    "# Relatório de classificação\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   }
  ],
