--- a/notebooks/linear_regression.ipynb
+++ b/notebooks/linear_regression.ipynb
@@ -2,24 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install pandas matplotlib seaborn scikit-learn xgboost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia do Modelo: 0.90\n",
+      "Score do modelo: 0.8994082840236687\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.90      0.87      0.89        76\n",
+      "        True       0.90      0.92      0.91        93\n",
+      "\n",
+      "    accuracy                           0.90       169\n",
+      "   macro avg       0.90      0.90      0.90       169\n",
+      "weighted avg       0.90      0.90      0.90       169\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
     "pd.set_option('future.no_silent_downcasting', True)\n",
     "\n",
@@ -33,8 +42,6 @@
     "y = full_matches_train_data['teamOneWon']\n",
     "y = y.apply(pd.to_numeric, errors='coerce')\n",
     "\n",
-    "print(f\"Número de amostras em X?{X.shape} e y:{y.shape}\")\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5)\n",
     "\n",
     "# Treinar o modelo com a base de treino\n",
@@ -47,15 +54,11 @@
     "# Calcular a acurácia\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f'Acurácia do Modelo: {accuracy:.2f}')\n",
-    "print(f\"Score do modelo: {model.score(X_test, y_test)}\")"
+    "print(f\"Score do modelo: {model.score(X_test, y_test)}\")\n",
+    "\n",
+    "# Relatório de classificação\n",
+    "print(classification_report(y_test, y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
