--- a/notebooks/random_forest.ipynb
+++ b/notebooks/random_forest.ipynb
@@ -2,25 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install pandas matplotlib seaborn scikit-learn xgboost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Número de amostras em X?(696, 600) e y:(696,)\n",
-      "Acurácia do Modelo de Random Forest: 0.90\n",
-      "Score do modelo de Random Forest: 0.9\n"
+      "Acurácia do Modelo de Random Forest: 0.70\n",
+      "Score do modelo de Random Forest: 0.7\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.68      0.81      0.74        47\n",
+      "        True       0.74      0.58      0.65        43\n",
+      "\n",
+      "    accuracy                           0.70        90\n",
+      "   macro avg       0.71      0.69      0.69        90\n",
+      "weighted avg       0.71      0.70      0.70        90\n",
+      "\n"
      ]
     }
    ],
@@ -29,11 +28,7 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "pd.set_option('future.no_silent_downcasting', True)\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', None)\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
     "full_matches_train_data = pd.read_csv('../data/processed/full_matches_train_data.csv')\n",
     "\n",
@@ -44,8 +39,6 @@
     "# Target (coluna que será prevista)\n",
     "y = full_matches_train_data['teamOneWon']\n",
     "y = y.apply(pd.to_numeric, errors='coerce')\n",
-    "\n",
-    "print(f\"Número de amostras em X?{X.shape} e y:{y.shape}\")\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
     "\n",
@@ -59,7 +52,10 @@
     "# Calcular a acurácia\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f'Acurácia do Modelo de Random Forest: {accuracy:.2f}')\n",
-    "print(f\"Score do modelo de Random Forest: {model.score(X_test, y_test)}\")"
+    "print(f\"Score do modelo de Random Forest: {model.score(X_test, y_test)}\")\n",
+    "\n",
+    "# Relatório de classificação\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   }
  ],
@@ -79,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
